# derp-keccak

./: .gitignore  Cargo.toml  README.md  input.txt
src/: aead.rs  hash.rs  keccak.rs  lib.rs  main.rs  util.rs
