[package]
name = "rust-keccak"
version = "0.1.0"
authors = ["iczero <iczero4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keccak"
path = "src/lib.rs"

[[bin]]
name = "sha3sum"
path = "src/bin/sha3sum.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0.59"
